--- a/WedOct4/assignments/html-1/styles.css
+++ b/WedOct4/assignments/html-1/styles.css
@@ -16,21 +16,55 @@ figcaption {
   text-align: center;
 }
 footer {
-  margin-top: 3rem;
+  display: flex;
+  justify-content: space-between;
+  margin: 3rem 0.4rem 0 0.8rem;
+}
+
+button {
+  margin: 1rem 0 0.2rem 0.5rem;
+  padding: 0.4rem 0.8rem;
+  border-radius: 2rem;
+  background-color: #baafaf;
+  transition: transform 0.3s;
+  box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px, rgba(0, 0, 0, 0.3) 0px 30px 60px -30px, rgba(10, 37, 64, 0.35) 0px -2px 6px 0px inset;
+}
+
+button:hover {
+  box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
+  transform: scale(1.1);
+
 }
 
 .main-content {
+  display: flex;
+  flex-direction: column;
   font-size: 1.4rem;
-  padding: 1rem;
+  padding: 1rem 1.8rem;
   margin: 0.5rem auto;
   border: 0.2rem solid #4d4d94;
   border-radius: 2rem;
 }
 
 .secondary-content {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
   font-size: 1.2rem;
   padding: 1rem;
   margin: 0.2rem auto;
   border: 0.1rem solid #474757;
   border-radius: 1rem;
+}
+
+.link {
+  text-decoration: none;
+}
+
+.link:hover {
+  color: #ff6347;
+}
+
+.to-home {
+  background-color: #baafaf;
 }
