--- a/WedOct4/assignments/html-1/styles.css
+++ b/WedOct4/assignments/html-1/styles.css
@@ -3,12 +3,24 @@
   background-color: rgb(230, 224, 216);
 }
 
+body {
+  font-family: 'Montserrat', sans-serif;
+  max-width: 800px;
+  margin: 0 auto;
+}
+
 h1 {
   text-decoration: underline;
 }
 
 h2 {
   font-style: italic;
+}
+
+figcaption,
+footer,
+td {
+  font-family: 'Rubik', sans-serif;
 }
 
 figcaption {
@@ -72,6 +84,7 @@ button:hover {
 .git-table {
   border: #474757 solid 0.2rem;
   border-collapse: collapse;
+  width: 100%;
 }
 
 .git-cap {
