--- a/10_10_23/assignments/styles.css
+++ b/10_10_23/assignments/styles.css
@@ -7,7 +7,7 @@
 body {
   font-family: 'Montserrat', sans-serif;
   max-width: 800px;
-  margin: 1rem;
+  margin: 1rem auto;
 }
 
 /* ========== Element Styles ==========  */
