--- a/10_16_23/styles.css
+++ b/10_16_23/styles.css
@@ -47,3 +47,9 @@ footer,
 .problem:last-child {
   border-bottom: transparent;
 }
+
+.ans {
+  color: var(--darkBread);
+  font-size: 1.3rem;
+  margin-left: 1rem;
+}
