added a very cliche counter component...

--- a/reactSprint/11_6_23/assignments/src/App.css
+++ b/reactSprint/11_6_23/assignments/src/App.css
@@ -36,3 +36,16 @@
     transform: rotate(360deg);
   }
 }
+
+.counterContainer {
+  display: flex;
+  flex-direction: column;
+  margin: 1rem;
+}
+
+button {
+  max-width: fit-content;
+  margin: 0.5rem auto;
+  padding: 0.5rem 1rem;
+  border-radius: 2rem;
+}
