noodling and doodling updates for 11-7-23

--- a/reactSprint/11_6_23/assignments/src/index.css
+++ b/reactSprint/11_6_23/assignments/src/index.css
@@ -11,3 +11,22 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+.content {
+  padding: 1rem;
+  margin: 0.5rem;
+  border: 0.5rem solid #6a5acd;
+  border-radius: 2rem;
+  max-width: 66%;
+}
+
+.link {
+  color: #61dafb;
+}
+
+.btn {
+  max-width: fit-content;
+  margin: 0.5rem auto;
+  padding: 0.5rem 1rem;
+  border-radius: 2rem;
+}
