just more maintenance, organization, etc

--- a/reactSprint/11_6_23/assignments/src/index.css
+++ b/reactSprint/11_6_23/assignments/src/index.css
@@ -31,7 +31,7 @@ code {
   border-radius: 2rem;
 }
 
-/* ======== FOR TEMP ASSIGNMENT ======== */
+/* ======== 11_7_23 TEMP ASSIGNMENT ========
 .inputs,
 .btn-list {
   display: flex;
@@ -53,3 +53,4 @@ input {
   padding: 0.5rem 1rem;
   border-radius: 2rem;
 }
+*/
