--- a/reactSprint/11_6_23/assignments/src/styles/App.css
+++ b/reactSprint/11_6_23/assignments/src/styles/App.css
@@ -24,7 +24,7 @@
   color: white;
 }
 
-/* ======== COMMENTED OUT FOR TEMP ASSIGNMENT ========
+/* ======== 11_7_23 TEMP ASSIGNMENT ========
 .btn-list {
   display: flex;
   justify-content: space-around;
