just a little fun

--- a/reactSprint/11_6_23/assignments/src/index.css
+++ b/reactSprint/11_6_23/assignments/src/index.css
@@ -49,6 +49,7 @@ input {
 .negative {
   border-color: #ff0000;
   color: #ff0000;
+  min-width: 20vw;
 }
 
 /* ======== 11_7_23 TEMP ASSIGNMENT ========
