--- a/reactSprint/11_6_23/assignments/src/index.css
+++ b/reactSprint/11_6_23/assignments/src/index.css
@@ -30,7 +30,7 @@ code {
   padding: 0.5rem 1rem;
   border-radius: 2rem;
 }
-/* ======== 11_7_23 TEMP ASSIGNMENT ======== */
+/* ======== 11_7_23 TEMP ASSIGNMENT ========
 .input-container {
   display: block;
   margin: 0.5rem;
@@ -51,6 +51,7 @@ input {
   color: #ff0000;
   min-width: 20vw;
 }
+*/
 
 /* ======== 11_7_23 TEMP ASSIGNMENT ========
 .inputs,
