Today's examples Memo is TODO

--- a/reactSprint/11_6_23/assignments/src/index.css
+++ b/reactSprint/11_6_23/assignments/src/index.css
@@ -140,7 +140,7 @@ input[type="checkbox"] {
 }
 
 
-/* ======== 11_7_23 TEMP ASSIGNMENT ========
+/* ======== 11_7_23 TEMP ASSIGNMENT ======== */
 .input-container {
   display: block;
   margin: 0.5rem;
@@ -163,7 +163,7 @@ input {
 }
 */
 
-/* ======== 11_7_23 TEMP ASSIGNMENT ========
+/* ======== 11_7_23 TEMP ASSIGNMENT ======== */
 .inputs,
 .btn-list {
   display: flex;
@@ -185,4 +185,3 @@ input {
   padding: 0.5rem 1rem;
   border-radius: 2rem;
 }
-*/
