implement components and functionality, CSS is TODO

--- a/reactSprint/11_16_23/investment-calculator/src/index.css
+++ b/reactSprint/11_16_23/investment-calculator/src/index.css
@@ -19,11 +19,12 @@ code {
 .app-logo {
   height: 20vmin;
   pointer-events: none;
+  background-color: transparent;
 }
 
 @media (prefers-reduced-motion: no-preference) {
   .app-logo {
-    animation: app-logo-spin infinite 20s linear;
+    animation: app-logo-spin infinite 10s linear;
   }
 }
 
