--- a/reactSprint/11_20_23/emp-management/src/styles/Table.css
+++ b/reactSprint/11_20_23/emp-management/src/styles/Table.css
@@ -1,8 +1,3 @@
-.table-container {
-  margin: 1rem auto;
-  font-size: 1.5rem;
-}
-
 table,
 th,
 td {
@@ -16,4 +11,16 @@ td {
 
 th {
   text-align: center;
+}
+
+.table-container {
+  margin: 1rem auto;
+  font-size: 1.5rem;
+}
+
+.td-input {
+  margin: 0;
+  padding: 0.2rem 0.75rem;
+  font-size: calc(10px + 1.5vmin);
+  border-radius: 0;
 }
