--- a/reactSprint/11_27_23/react-redux/src/styles/App.css
+++ b/reactSprint/11_27_23/react-redux/src/styles/App.css
@@ -18,8 +18,9 @@
   min-height: 100vh;
   display: flex;
   flex-direction: column;
-  align-items: center;
+  /* align-items: center; */
   justify-content: center;
+  padding: 2rem;
   font-size: calc(10px + 2vmin);
   color: white;
 }
